[tool.poetry]
name = "interactive-concept-bottleneck"
version = "0.1.0"
description = ""
authors = ["Shuang Wu <seanwu1105@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
torch = "^1.13.0"
torchvision = "^0.14.0"
numpy = "^1.23.4"
pyside6 = "~6.3"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.5"
black = "^22.10.0"
pre-commit = "^2.20.0"
pytest = "^7.2.0"
ipykernel = "^6.17.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
